# Code-Challenges

./: .gitignore  README.md  calculator_3_kyu.py  moving_zeros_to_the_end_5_kyu.py  period_late_8_kyu.py
AlgoExpert_Python/: smallest_difference.py
AoC/: 13.txt12  14dummy.txt  day1.py  day10.py  day12.py  day12_p2.py  day3.py  day5.py  day7.py
AoC_2020_Python/: day11.py  day13.py  day14.py  day15.py  day15_c.c  day16.py  day2.py  day4.py  day6.py  day8.py  op.json
AoC_2021_Rust/: Cargo.toml
AoC_2021_Rust/python/: d12_2021.py  d15_2021.py
AoC_2021_Rust/src/: d1_2021.rs  d2_2015.rs  d3_2015.rs  d3_2021.rs  d5_2021.rs  d7_2021.rs  lib.rs
C/: testing.c  vaporcode_7_kyu.c
CodeGolf/: iq_test_6_kyu.py  jaden_casing_strings_7_kyu.py  list_filtering_7_kyu.py
Codewars_Haskell/: bug_fix_1.hs  correct_recognition_software.hs  counting_duplicates.hs  descending_order.hs  divisible_by_given.hs  double_trouble.hs  drying_potatoes.hs  exclamation_marks_series_num1.hs  head_wrong_end.hs  is_string_uppercase.hs  make_upper_case.hs  multiple_of_3_or_5.hs  odd_or_even.hs  regex_count_lowercase.hs  sentence_smash.hs  shortest_word.hs  simple_multiplication.hs  sum_arrays.hs  sums_of_parts.hs  switchero.hs  ten_min_walk.hs  the_if_function.hs  ufc_mcgregor.hs  unique_in_order.hs  welcome_to_the_city.hs  youre_square.hs
Codewars_Python/: are_they_the_same_6_kyu.py  array_diff.py  basic_math_operations.py  create_phone_number.py  disemvowel_trolls.py  duplicate_encoder.py  error_corrections_1_hamming_code.py  evens_and_odds.py  find_the_parity_outlier.py  findthemiddle.py  (+19 more)
(+225 files in other folders)
