[package]
name = "rust_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
regex = "1.5.4"
# strum = { version = "0.23.0", features = ["derive"] }
fnv = "1.0.7"
transpose = "0.2.1"
cached = "0.26.2"